fix bug: unable to click project on mobile

--- a/resources/assets/sass/components/_project-viewer.scss
+++ b/resources/assets/sass/components/_project-viewer.scss
@@ -8,12 +8,17 @@
     $box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
         0 10px 10px rgba(0, 0, 0, 0.22);
     $circle-size: 2rem;
+    opacity: 0;
+    visibility: hidden;
 
     @include tablet {
         width: 500px;
     }
 
     &.active {
+        opacity: 1;
+        visibility: visible;
+
         #{$p}__container {
             transform: translateX(0);
         }
